generated/checkers/gen/AllGen-Misuse-da1983355ccefcfb3f8eb410fff82e250fa87e39/build_logs/syntax-repair-06/build_stderr_5.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::getCountedByCountField(const clang::FieldDecl*, const clang::FieldDecl*&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:126:32: error: ‘const class clang::FieldDecl’ has no member named ‘isFlexibleArrayMember’; did you mean ‘isFlexibleArrayMemberLike’?
  126 |   const bool IsFlexLike = FAD->isFlexibleArrayMember() || FAD->hasAttr<CountedByAttr>();
      |                                ^~~~~~~~~~~~~~~~~~~~~
      |                                isFlexibleArrayMemberLike
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:133:35: error: ‘class clang::CountedByAttr’ has no member named ‘getCountedBy’; did you mean ‘AT_CountedBy’?
  133 |     if (IdentifierInfo *II = CBA->getCountedBy()) {
      |                                   ^~~~~~~~~~~~
      |                                   AT_CountedBy
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::SAGenTestChecker::extractCountedByFAccess(const clang::Expr*, clang::ento::CheckerContext&, const clang::FieldDecl*&, const clang::FieldDecl*&, const clang::ento::MemRegion*&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:194:13: error: ‘const class clang::FieldDecl’ has no member named ‘isFlexibleArrayMember’; did you mean ‘isFlexibleArrayMemberLike’?
  194 |   if (!(FD->isFlexibleArrayMember() || FD->hasAttr<CountedByAttr>()))
      |             ^~~~~~~~~~~~~~~~~~~~~
      |             isFlexibleArrayMemberLike
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:272:14: error: ‘const class clang::FieldDecl’ has no member named ‘isFlexibleArrayMember’; did you mean ‘isFlexibleArrayMemberLike’?
  272 |     if (!(F->isFlexibleArrayMember() || F->hasAttr<CountedByAttr>()))
      |              ^~~~~~~~~~~~~~~~~~~~~
      |              isFlexibleArrayMemberLike
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
